# Designathon-2

./: .gitignore  alembic.ini  main.py  pyproject.toml  requirements.txt
alembic/: env.py
core/: security.py
crud/: ConsultantProfile.py  JobDescription.py  MatchResult.py  Notification.py  WorkflowStatus.py  job_description.py  user.py
db/: database.py
model/: ConsultantEnum.py  ConsultantProfile.py  JobDescription.py  JobDescriptionEnum.py  MatchResult.py  Notification.py  NotificationEnum.py  WorkflowEnum.py  WorkflowStatus.py  job_description.py  user.py  user_role.py
router/: ConsultantProfile.py  JobDescription.py  MatchResult.py  Notification.py  WorkflowStatus.py  job_description.py  user.py
schema/: ConsultantProfile.py  JobDescription.py  MatchResult.py  Notification.py  WorkflowStatus.py  job_description.py  user.py
utility/: agentic_flow.py  embeddings.py  file_reader_using_genai.py  jobdescription_reader.py  logging_config.py  send_email.py
